Revert "updated contacts to "contact us""
This reverts commit 60b62d782ce3779a8eab57b9860f7816e200a812.

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
           <div id="menu">
           <a href="index.html">Home</a> 
           <a href="about-us.html">About us</a>
-          <a href="contact-us.html">Contact</a>      
+          <a href="contact.html">Contact</a>      
           </div>
           <h2>Contact</h2>
           <p>Below is our contact details</p>    
